[tool.poetry]
name = "audio-to-yt-album"
version = "0.1.0"
description = ""
authors = ["chungchunwang <62127500+chungchunwang@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "^1.0.3"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
